@@ -1,3 +1,8 @@
+2011-05-19  Sam Steingold  <sds@gnu.org>
+
+	* constsym.d, lispbibl.d, misc.d, subr.d: remove HAVE_ENVIRONMENT
+	which is always defined on all platforms supported by CLISP
+
 2011-05-18  Vladimir Tzankov  <vtzankov@gmail.com>
 
 	* time.d (thread_from_arg) [MULTITHREAD]: fix g++ gcsafety build
